--- a/.github/workflows/deploy-azure.yml
+++ b/.github/workflows/deploy-azure.yml
@@ -1,16 +1,13 @@
-name: Deploy to Azure Container Instances
+name: Deploy to Azure App Service
 
 on:
   push:
     branches: [ main ]
-  pull_request:
-    branches: [ main ]
+  workflow_dispatch:
 
 env:
-  AZURE_CONTAINER_REGISTRY: ${{ secrets.AZURE_REGISTRY }}
-  CONTAINER_NAME: autobattlegame
-  RESOURCE_GROUP: ${{ secrets.AZURE_RESOURCE_GROUP }}
-  LOCATION: "Canada Central"
+  AZURE_WEBAPP_NAME: AutoBattleGame-Online
+  NODE_VERSION: '18.x'
 
 jobs:
   build-and-deploy:
@@ -23,42 +20,16 @@ jobs:
     - name: Set up Node.js
       uses: actions/setup-node@v3
       with:
-        node-version: '18'
+        node-version: ${{ env.NODE_VERSION }}
         cache: 'npm'
 
     - name: Install dependencies
       run: npm ci
 
-    # - name: Run tests
-    #   run: npm test
-
-    - name: Login to Azure
-      uses: azure/login@v1
+    - name: Deploy to Azure Web App
+      uses: azure/webapps-deploy@v2
       with:
-        creds: ${{ secrets.AZURE_CREDENTIALS }}
-
-    - name: Login to Azure Container Registry
-      uses: azure/docker-login@v1
-      with:
-        login-server: ${{ env.AZURE_CONTAINER_REGISTRY }}
-        username: ${{ secrets.AZURE_REGISTRY_USERNAME }}
-        password: ${{ secrets.AZURE_REGISTRY_PASSWORD }}
-
-    - name: Build and push Docker image
-      run: |
-        docker build -t ${{ env.AZURE_CONTAINER_REGISTRY }}/${{ env.CONTAINER_NAME }}:${{ github.sha }} .
-        docker push ${{ env.AZURE_CONTAINER_REGISTRY }}/${{ env.CONTAINER_NAME }}:${{ github.sha }}
-
-    - name: Deploy to Azure Container Instances
-      uses: azure/container-instances-deploy@v1
-      with:
-        resource-group: ${{ env.RESOURCE_GROUP }}
-        dns-name-label: ${{ env.CONTAINER_NAME }}
-        image: ${{ env.AZURE_CONTAINER_REGISTRY }}/${{ env.CONTAINER_NAME }}:${{ github.sha }}
-        name: ${{ env.CONTAINER_NAME }}
-        location: ${{ env.LOCATION }}
-        ports: 3000
-        environment-variables: |
-          NODE_ENV=production
-          PORT=3000
+        app-name: ${{ env.AZURE_WEBAPP_NAME }}
+        publish-profile: ${{ secrets.AZUREAPPSERVICE_PUBLISHPROFILE }}
+        package: '.'
 
