--- a/package.json
+++ b/package.json
@@ -11,20 +11,26 @@
     "docker:build": "docker build -t autobattlegame-online .",
     "docker:run": "docker run -p 3000:3000 autobattlegame-online"
   },
-  "keywords": ["game", "online", "leaderboard", "realtime"],
+  "keywords": [
+    "game",
+    "online",
+    "leaderboard",
+    "realtime"
+  ],
   "author": "AutoBattleGame Team",
   "license": "MIT",
   "dependencies": {
-    "express": "^4.18.2",
-    "socket.io": "^4.7.2",
-    "cors": "^2.8.5",
-    "helmet": "^7.0.0",
-    "express-rate-limit": "^6.8.1",
     "bcryptjs": "^2.4.3",
+    "cors": "^2.8.5",
+    "dotenv": "^16.4.5",
+    "express": "^4.21.2",
+    "express-rate-limit": "^7.4.1",
+    "express-validator": "^7.2.0",
+    "helmet": "^8.0.0",
     "jsonwebtoken": "^9.0.2",
-    "sqlite3": "^5.1.6",
-    "uuid": "^9.0.0",
-    "express-validator": "^7.0.1"
+    "socket.io": "^4.8.1",
+    "sqlite3": "^5.1.7",
+    "uuid": "^11.0.3"
   },
   "devDependencies": {
     "nodemon": "^3.0.1"
